test/runtime/jhh/localePerSocket/lps.skipif
CHPL_TARGET_PLATFORM != hpe-cray-ex
CHPL_COMM != ofi
CHPL_TASKS != qthreads
CHPL_QTHREAD_TOPOLOGY != binders
CHPL_HWLOC != bundled
